--- a/app/src/main/res/layout/list_fileitem_layout.xml
+++ b/app/src/main/res/layout/list_fileitem_layout.xml
@@ -13,7 +13,8 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="0dp"
-        android:src="@drawable/folder" />
+        android:src="@drawable/folder"
+        />
 
     <TextView
         android:id="@+id/fileName"
@@ -24,5 +25,13 @@
         android:padding="16dp"
         android:text="@string/app_name"
         android:textSize="24sp" />
+    <ImageView
+        android:id="@+id/folderArrowIcon"
+        android:layout_width="20dp"
+        android:layout_height="40dp"
+        android:text="sadasdasda"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_chevron_right_black_24dp"/>
+
 
 </LinearLayout>
