--- a/app/src/main/res/layout/list_fileitem_layout.xml
+++ b/app/src/main/res/layout/list_fileitem_layout.xml
@@ -24,14 +24,16 @@
         android:layout_weight="1"
         android:padding="16dp"
         android:text="@string/app_name"
-        android:textSize="24sp" />
+        android:textSize="12dp"
+        />
     <ImageView
         android:id="@+id/folderArrowIcon"
         android:layout_width="20dp"
         android:layout_height="40dp"
         android:text="sadasdasda"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_chevron_right_black_24dp"/>
+       />
+
 
 
 </LinearLayout>
