--- a/app/src/main/res/layout/activity_launch_screen.xml
+++ b/app/src/main/res/layout/activity_launch_screen.xml
@@ -4,151 +4,110 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LaunchScreenActivity"
+    android:background="@color/backgroundcolor"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="10dp"
-    android:background="@color/backgroundcolor"
-    android:gravity="center">
+    tools:context=".Activity.LaunchScreenActivity">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="horizontal"
-    android:clipToPadding="false">
-
-    <android.support.v7.widget.CardView
-        android:layout_width="160dp"
-        android:layout_height="190dp"
-        android:layout_margin="10dp">
-        
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
-            <ImageView
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:background="@drawable/celecbackgroundpurple"
-                android:src="@drawable/ic_cloud_circle_black_24dp"
-                android:padding="10dp"/>
-            <Button
-                android:id="@+id/onPremBtn"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:text="On Prem"
-                android:shadowColor="@color/colorAccent"
-                android:layout_marginTop="10dp"
-                />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/lightgray"
-                android:layout_margin="10dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Login With On prem"
-                android:padding="5dp"
-                android:gravity="center"
-                android:textColor="@android:color/darker_gray"/>
-        </LinearLayout>
-       
-    </android.support.v7.widget.CardView>
-    <android.support.v7.widget.CardView
-        android:layout_width="160dp"
-        android:layout_height="190dp"
-        android:layout_margin="10dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:clickable="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
-            <ImageView
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:background="@drawable/celecbeckgroundpink"
-                android:src="@drawable/ic_cloud_off_black_24dp"
-                android:padding="10dp"/>
-            <Button
-                android:id="@+id/azureBtn"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:text="Azure"
-                android:layout_marginTop="10dp"
-                />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/lightgray"
-                android:layout_margin="10dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Login With Azure"
-                android:padding="5dp"
-                android:gravity="center"
-                android:textColor="@android:color/darker_gray"/>
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clipToPadding="false"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:clipToPadding="false">
-
+        android:orientation="horizontal">
 
         <android.support.v7.widget.CardView
-            android:layout_width="340dp"
+            android:layout_width="160dp"
             android:layout_height="190dp"
             android:layout_margin="10dp"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:clickable="true">
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
+
                 <ImageView
                     android:layout_width="64dp"
                     android:layout_height="64dp"
-                    android:background="@drawable/celecbackgroundyellow"
-                    android:src="@drawable/ic_cancel_black_24dp"
-                    android:padding="10dp"/>
+                    android:background="@drawable/celecbackgroundpurple"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_cloud_circle_black_24dp" />
+
                 <Button
-                    android:id="@+id/tempcard"
+                    android:id="@+id/onPremBtn"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_width="200dp"
-                    android:text="Not Working"
                     android:layout_marginTop="10dp"
-                    />
+                    android:shadowColor="@color/colorAccent"
+                    android:text="On Prem" />
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/lightgray"
-                    android:layout_margin="10dp"/>
+                    android:layout_margin="10dp"
+                    android:background="@color/lightgray" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Dont do anything"
-                    android:padding="5dp"
                     android:gravity="center"
-                    android:textColor="@android:color/darker_gray"/>
+                    android:padding="5dp"
+                    android:text="Login With On prem"
+                    android:textColor="@android:color/darker_gray" />
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="160dp"
+            android:layout_height="190dp"
+            android:layout_margin="10dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:background="@drawable/celecbeckgroundpink"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_cloud_off_black_24dp" />
+
+                <Button
+                    android:id="@+id/azureBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Azure" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_margin="10dp"
+                    android:background="@color/lightgray" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:text="Login With Azure"
+                    android:textColor="@android:color/darker_gray" />
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
-
 
 </LinearLayout>
 
